fix(backlog): tg-2607 misaligned button in empty backlog message

--- a/app/styles/layout/backlog.scss
+++ b/app/styles/layout/backlog.scss
@@ -13,6 +13,8 @@
         grid-template-columns: 9fr;
     }
     .empty-large {
+        display: flex;
+        flex-direction: column;
         margin: 4rem auto;
     }
 }
